[gd_scene load_steps=8 format=3 uid="uid://dn0yb86brv6fk"]

[ext_resource type="Script" uid="uid://b7adbwjwobvq8" path="res://scripts/components/moving_hole_obstacle.gd" id="1_3me31"]
[ext_resource type="PackedScene" uid="uid://cu6xqw43w7jfb" path="res://scenes/components/moving_block.tscn" id="2_dxvb1"]
[ext_resource type="Material" uid="uid://durhuyowpyuv0" path="res://resources/materials/slit_obstacle.tres" id="2_vphvp"]
[ext_resource type="Script" uid="uid://bc287iiupc46g" path="res://scripts/indicator.gd" id="3_vphvp"]

[sub_resource type="BoxMesh" id="BoxMesh_dxvb1"]
material = ExtResource("2_vphvp")
size = Vector3(30, 20, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v6io7"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_juvfu"]
material = SubResource("StandardMaterial3D_v6io7")
size = Vector3(0.5, 0.5, 0.1)

[node name="MovingHoleObstacle" type="Node3D"]
script = ExtResource("1_3me31")
block_scene = ExtResource("2_dxvb1")

[node name="RightFiller" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 75, 10, 0)
mesh = SubResource("BoxMesh_dxvb1")

[node name="MovingParts" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.778, 2.6)
layers = 2
mesh = SubResource("BoxMesh_juvfu")
script = ExtResource("3_vphvp")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 65.5163, 21.0311, -49.1116)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
